# reserves_project

./: CHANGELOG.md  IMPLEMENTATION_BACKLOG_PHASES_1_2.md  METHODOLOGY.md  MODEL_VERIFICATION_REPORT.md  README.md  REPLICATION.md  SUPER_PROMPT_1_ANALYTICAL_CHANGES.md  SUPER_PROMPT_2_MANUSCRIPT_DISCREPANCIES.md  environment-full.yml  environment.yml  forecasting_report.md  manuscript_feedback_assessment.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  requirements.txt
academic_deliverables/: README.md  deliverable1_variable_details.csv  deliverable1_variable_sets.csv  deliverable2_model_matrix.csv  deliverable2_rmse_pivot.csv  deliverable3_methodology.md  deliverable3_source_quality.csv  deliverable3_varset_quality.csv  diff_vs_level_postcrisis.csv  diff_vs_level_precrisis.csv  ensemble_forecasts.csv  ensemble_results.csv  full_70_combinations.csv  full_70_pivot.csv  precrisis_pivot.csv  precrisis_results.csv
academic_output/: README.md
academic_output/tables/: Table_BaiPerron_BIC_Selection.csv  Table_BaiPerron_Break_Dates.csv  Table_BaiPerron_Segment_Statistics.csv  Table_Chow_Test_Results.csv  Table_PCA_Component_Loadings.csv  Table_PCA_Interpretation.csv  Table_PCA_Variance_Explained.csv
apps/: app_data_dictionary.py  app_reserve_adequacy.py  app_reserves_diagnostics.py  run_diagnostics.py
apps/reserves_diagnostics/: __init__.py  config.py  data_loader.py  main.py  utils.py
data/diagnostics/: arch_summary.csv  bai_perron_summary.csv  chow_test_summary.csv  cointegration_engle_granger_summary.csv  diagnostic_results.json  ecm_suitability_summary.csv  granger_causality_summary.csv  integration_summary.csv  johansen_summary.csv  multistart_msvar_quick.csv  multistart_msvar_quick_forecast_rmse.csv  run_manifest.json  svar_exogeneity_summary.csv  svar_model_summary.csv  svar_sign_restriction_summary.csv  variable_quality_summary.csv  vecm_suitability_summary.csv
data/disentangling/: disentangling_aligned_panel.csv  disentangling_dm_tests.csv  disentangling_effects.csv  disentangling_rmse_long.csv  disentangling_rmse_matrix.csv  disentangling_summary.json  headline_rmse_reductions.csv  run_manifest.json  table_a10_headline_rmse_uncertainty.tex  table_a9_disentangling_uncertainty.tex  table_did_rmse.tex
docs/: DATA_DICTIONARY_RESERVE_ADEQUACY.md  DIAGNOSTIC_TEST_RESULTS.md  RESERVE_ADEQUACY_METHODOLOGY_COMPLETE.md  RESERVE_FORECAST_METHODOLOGY.md  RESERVE_FORECAST_PROGRESS.md  complete_data_dictionary.md
manuscript/: manuscript_updated.aux  manuscript_updated.out  manuscript_updated.tex  manuscript_updated_v5.tex  manuscript_v2.aux  manuscript_v2.out  manuscript_v2.tex  manuscript_v3.tex  manuscript_v4.tex  manuscript_v5.aux  manuscript_v5.out  manuscript_v5.tex  section4_methodology_v2.docx
manuscripts/: GI .html  manuscript_full_draft.aux  manuscript_full_draft.out  manuscript_full_draft.tex  test_table.aux  test_table2.aux
notebooks/: 01_quick_start.ipynb  02_model_comparison.ipynb  03_scenario_analysis.ipynb  README.md
reserves_project/: __init__.py
reserves_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: prepare_forecasting_data.py  run_diagnostics.py  run_forecasting_models.py  run_rolling_backtests.py  validate_against_cbsl.py
specs/: 00_MASTER_PIPELINE_SPEC.md  01_VARIABLE_SETS_SPEC.md  02_STRUCTURAL_BREAKS_SPEC.md  03_BVAR_SPEC.md  04_TVP_VAR_SPEC.md  05_FACTOR_VAR_SPEC.md  06_THRESHOLD_VAR_SPEC.md  07_MIDAS_SPEC.md  08_FORECAST_COMBINATION_SPEC.md  09_DMA_DMS_SPEC.md  10_STATISTICAL_TESTS_SPEC.md  11_ROBUSTNESS_TABLES_SPEC.md
tests/: README.md  __init__.py  conftest.py  test_cli_main.py  test_diebold_mariano.py  test_disentangling.py  test_dma_augmentation.py  test_evaluation_segments.py  test_generate_robustness_tables.py  test_information_loss.py  test_leakage_checks.py  test_mechanism_synthesis.py  test_metrics.py  test_models.py  test_msvar_irf.py  test_regime_characterization_pipeline.py  test_scenarios.py  test_split_specs.py  test_unified_common_window.py  test_varsets.py  test_windowing.py
(+497 files in other folders)
