[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reserves-project"
version = "0.1.0"
description = "Reserves forecasting research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "arch>=6.0.0",
    "hmmlearn>=0.3.0",
    "ruptures>=1.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0.0",
    "tensorflow>=2.15.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "reserves-project[ml,dev]",
]

[project.scripts]
slreserves = "reserves_project.cli.main:main"
reserves-unified = "reserves_project.cli.unified:main"
reserves-stat-tests = "reserves_project.cli.stat_tests:main"
reserves-tables = "reserves_project.cli.tables:main"
reserves-tune-ml = "reserves_project.cli.tune_ml:main"
reserves-diagnostics = "reserves_project.cli.diagnostics:main"
reserves-forecast-prep = "reserves_project.cli.forecast_prep:main"
reserves-forecast-baselines = "reserves_project.cli.forecast_baselines:main"
reserves-rolling-backtests = "reserves_project.cli.rolling_backtests:main"
reserves-scenarios = "reserves_project.cli.scenarios:main"

[tool.setuptools]
packages = [
  "reserves_project",
  "reserves_project.config",
  "reserves_project.utils",
  "reserves_project.cli",
  "reserves_project.models",
  "reserves_project.eval",
  "reserves_project.pipelines",
  "reserves_project.robustness",
  "reserves_project.diagnostics",
  "reserves_project.forecasting_prep",
  "reserves_project.apps",
  "reserves_project.apps.reserves_diagnostics",
  "reserves_project.apps.reserves_diagnostics.pages",
  "reserves_project.forecasting_models",
  "reserves_project.scenarios",
]
